Cambios en los estilos y scripts
Se seleccionaron los scripts que deben estar activados, quedando al margen todos los que fueron trabajados en la cursada. Estructuración del CSS.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <script src="https://kit.fontawesome.com/e26dbc3af6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Patrick+Hand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="logo">
             <a href="index.html"><i class="fa-solid fa-hashtag fa-2xl"></i></a>
-            <h1 id="cambio-nombre">Sanzo</h1>
+            <h1 id="cambio-nombre">NicoBenialgo</h1>
         </div>
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
@@ -82,7 +83,8 @@
                     </div>
                     <div class="content-description">
                         <p>
-                            Mi "romance" con el arte de la programación surgió a medida que me adentré dentro de un sitio
+                            Mi "romance" con el arte de la programación surgió a medida que me adentré dentro de un
+                            sitio
                             web al que asisto hace mucho: <b>FANDOM</b>.
                         </p>
                     </div>
